--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1"
   }
 }
